@@ -1,3 +1,11 @@
+2006-06-24  Matti Aarnio  <mea@zmailer.org>
+
+	* smtpserver/smtpserver.c, smtpserver/smtpserver.h, 
+	  smtpserver/subdaemons.c, smtpserver/subdaemon-trk.c:
+	   Sun SUNWspro compiler v.11 practically wants all
+	   global variables that signal handlers modify to be
+	   of type "volatile".
+
 2006-06-23  Matti Aarnio  <mea@zmailer.org>
 
 	* smtpserver/cfgread.c:
@@ -11,8 +19,7 @@
 	* configure.in:
 	    Autodetect sys/poll.h,  and  poll() functions.
 
-	* lib/Makefile.in, lib/zmpoll.c, router/daemonsub.c,
-	  zzz
+	* lib/Makefile.in, lib/zmpoll.c, router/daemonsub.c:
 	    Introduce internal  zmpoll()  API.
 
 	* router/functions.c:
